Apply google map view on main page

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -8,6 +8,10 @@
  * App-wide Styles
  */
 
+body {
+	background-color: #dadada;
+}
+
 .browserupgrade {
   margin: 0.2em 0;
   background: #ccc;
@@ -20,4 +24,5 @@
 @import 'main/main';
 @import '../components/footer/footer';
 @import '../components/modal/modal';
+@import '../components/navbar/navbar';
 /* endinject */
