--- a/client/components/navbar/navbar.less
+++ b/client/components/navbar/navbar.less
@@ -1,5 +1,5 @@
 .page-header {
-    background-color: #00000045;
+    background-color: #00000073;
     margin: 0px 0px 20px 0px;
     padding: 0px;
     border-bottom: 1px solid #1010102e;
@@ -33,7 +33,7 @@
 
 .logo-header:hover, #login:hover, #signup:hover {
     cursor: pointer;
-    background-color: #6b6b6b;
+    background-color: #424242;
 
     .logo {
         opacity: unset;
