--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -7,12 +7,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <div class="logo-header">
-        <a href="/">
+      <div class="logo-header" ui-sref="main">
+        <div class="logo-contents">
           <img class="logo" src="../assets/images/logo-white.png">
-          <span>Free location search</span>
-        </a>
-        
+          <span class="logo-text">Free location search</span>
+        </div>
       </div>
     </div>
     <div uib-collapse="$ctrl.isCollapsed" class="navbar-collapse collapse" id="navbar-main">
@@ -24,8 +23,8 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        <li ng-hide="$ctrl.isLoggedIn()" ui-sref-active="active"><a id="signup" ui-sref="signup"><span>Sign up</span></a></li>
-        <li ng-hide="$ctrl.isLoggedIn()" ui-sref-active="active"><a id="login" ui-sref="login"><span>Login</span></a></li>
+        <li ng-hide="$ctrl.isLoggedIn()" ui-sref-active="active" ui-sref="signup" id="signup"><span>Sign up</span></li>
+        <li ng-hide="$ctrl.isLoggedIn()" ui-sref-active="active" ui-sref="login" id="login"><span>Login</span></li>
         <li ng-show="$ctrl.isLoggedIn()"><p class="navbar-text">Hello {{ $ctrl.getCurrentUser().name }}</p> </li>
         <li ng-show="$ctrl.isLoggedIn()" ui-sref-active="active"><a ui-sref="settings"><span class="glyphicon glyphicon-cog"></span></a></li>
         <li ng-show="$ctrl.isLoggedIn()"><a ui-sref="logout">Logout</a></li>
