--- a/client/app/app.less
+++ b/client/app/app.less
@@ -9,7 +9,27 @@
  */
 
 body {
-	background-color: #dadada;
+  background-color: #dadada;
+}
+
+input[type=text]:hover, input[type=email]:hover, input[type=password]:hover {
+  background-color: #efefef;
+}
+
+input[type=text]:focus, input[type=email]:focus, input[type=password]:focus {
+  background-color: transparent;
+}
+
+.app-default-btn, .app-default-btn:active, .app-default-btn:focus {
+  background-color: #424242;
+  color: #ffffff;
+  border: 0px;
+  margin-bottom: 10px;
+}
+
+.has-error {
+  border: 1px solid #ff5252;
+  background-color: #ff000005;
 }
 
 .browserupgrade {
@@ -22,6 +42,7 @@ body {
 /* inject:less */
 @import 'admin/admin';
 @import 'main/main';
+@import 'account/login/login';
 @import '../components/footer/footer';
 @import '../components/modal/modal';
 @import '../components/navbar/navbar';
