Added error message on login page

--- a/client/app/account/login/login.less
+++ b/client/app/account/login/login.less
@@ -12,7 +12,7 @@
 }
 
 .nxt-group {
-  margin-top: 40px;
+  margin-top: 20px;
 
   a {
     cursor: pointer;
@@ -32,9 +32,21 @@
   cursor: pointer;
 }
 
+.validation-message {
+  position: absolute;
+  color: #c14f4f;
+}
+
 .error-message {
   position: absolute;
   top: 165px;
   text-align: left;
   color: #c14f4f;
+}
+
+.login, .signup {
+  .form-group {
+    padding-bottom: 25px;
+    margin-bottom: 0px;
+  }
 }
