--- a/client/app/app.less
+++ b/client/app/app.less
@@ -17,7 +17,7 @@ input[type=text]:hover, input[type=email]:hover, input[type=password]:hover {
 }
 
 input[type=text]:focus, input[type=email]:focus, input[type=password]:focus {
-  background-color: transparent;
+  background-color: #ffffff;
 }
 
 .app-default-btn, .app-default-btn:active, .app-default-btn:focus {
@@ -40,9 +40,9 @@ input[type=text]:focus, input[type=email]:focus, input[type=password]:focus {
 }
 
 /* inject:less */
+@import 'account/login/login';
 @import 'admin/admin';
 @import 'main/main';
-@import 'account/login/login';
 @import '../components/footer/footer';
 @import '../components/modal/modal';
 @import '../components/navbar/navbar';
