Added origin and end inputs with autocomplete event provided by Google Map API

--- a/client/app/main/main.less
+++ b/client/app/main/main.less
@@ -1,3 +1,47 @@
 .map {
   height: 480px;
 }
+
+.direction-inputs {
+  margin: 0px 15px;
+
+  .signup > .form-group {
+    padding-bottom: 60px;
+  }
+}
+
+.current-location-cbox {
+  margin: -2px 0px 3px;
+  font-size: 13px;
+}
+
+.main {
+  .form-group {
+    padding-bottom: 70px;
+    margin-bottom: 0px;
+  }
+
+  ul.nav.nav-tabs {
+    margin-bottom: 30px;
+
+    li {
+      padding: 0px;
+      background-color: transparent;
+
+      a {
+        color: #333333;
+      }
+
+      a:hover {
+        background-color: #efefef;
+      }
+    }
+
+    li.active {
+      a {
+        background-color: #424242;
+        color: #ffffff;
+      }
+    }
+  }
+}
