--- a/client/app/app.less
+++ b/client/app/app.less
@@ -39,6 +39,10 @@ input[type=text]:focus, input[type=email]:focus, input[type=password]:focus {
   padding: 0.2em 0;
 }
 
+label {
+  color: #424242;
+}
+
 /* inject:less */
 @import 'account/login/login';
 @import 'admin/admin';
